--- a/templates/dongqiudi.html
+++ b/templates/dongqiudi.html
@@ -5,6 +5,7 @@
     <tr>
         <th>ID</th>
         <th>联赛</th>
+        <th>日期</th>
         <th>时间</th>
         <th>主队</th>
         <th>客队</th>
@@ -18,6 +19,7 @@
     <tr>
         <td >{{ match.match_id }}</td>
         <td>{{ match.league_name }}</td>
+        <td>{{ match.match_day }}</td>
         <td>{{ match.state }}</td>
         <td>{{ match.home_name }}</td>
         <td>{{ match.away_name}}</td>
